--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ h1 {
 }
 
 /* Buttons */
-.main-action{
+.main-actionold{
   background: orange;
   color: black;
   font-size: 1.25rem;
@@ -232,6 +232,28 @@ h1 {
   min-width: 12.125rem;
   transition: background 0.3s, transform 0.2s;
 }
+.main-action {
+  display: block;
+  width: 100%;
+  background: orange;
+  color: black;
+  font-size: 1.25rem; /* 20px */
+  font-weight: bold;
+  padding: 0.5rem; /* 8px */
+  border-radius: 0.9375rem; /* 15px */
+  margin-top: 0.5rem;
+  cursor: pointer;
+  border: none;
+  transition: background 0.3s, transform 0.2s;
+}
+
+.main-action:hover {
+  background: #ffb84d;
+  transform: scale(1.05);
+}
+
+
+
 .main-action2 {
   width: 95vw;
   background: orange;
@@ -245,7 +267,7 @@ h1 {
   border: none;
   transition: background 0.3s, transform 0.2s;
 }
-.main-action:hover,
+
 .main-action2:hover {
   background: #ffb84d;
   transform: scale(1.05);
