--- a/style.css
+++ b/style.css
@@ -91,11 +91,12 @@ h1 {
 
 .teams {
   background: white;
+  border-radius: 1.5rem;
   padding: 0.6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 0.75rem;
+  gap: 0.5rem;
 }
 
 .team {
