--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
   width: 100%;
   padding: 0.25rem;
   margin: 0.5rem 0;
-  font-size: 1rem;
+  font-size: 1.25rem;
   border-radius: 0.375rem;
   box-sizing: border-box;
 }
@@ -96,7 +96,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 0.5rem;
+  gap: 0.15rem;
 }
 
 .team {
@@ -197,6 +197,7 @@ h1 {
   align-items: flex-start;
   gap: 0.5rem;
   padding: 0.5rem;
+  margin: 0.5rem;
   box-sizing: border-box;
   border-radius: 0.375rem;
   min-height: 5rem;
