--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ h1 {
   display: flex;
   position: relative;
   width: 95%;
-  height: 120px;
   border-radius: 1rem;
   overflow: hidden;
   box-shadow: 0 4px 10px rgba(0,0,0,0.2);
@@ -124,28 +123,14 @@ h1 {
   top: 0;
   bottom: 0;
   left: 50%;
-  width: 6px; /* line thickness */
-  background: white;
+  width: 1rem; /* line thickness */
+  background: black;
   transform: translateX(-50%);
   z-index: 1;
   opacity: 0.9;
 }
 
-/* VS circle in center */
-.vs {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  color: black;
-  font-weight: bold;
-  font-size: 14px;
-  border-radius: 50%;
-  padding: 6px 10px;
-  z-index: 2;
-  box-shadow: 0 0 4px rgba(0,0,0,0.3);
-}
+
 
 /* Swap icon 🔁 */
 .swap-icon {
