--- a/style.css
+++ b/style.css
@@ -90,12 +90,12 @@ h1 {
   flex: 1;
   background: white;
   border-radius: 1rem;
-  padding: 0.6rem;
+  padding: 0.25rem;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   justify-content: center;
-  gap: 0.4rem;
+  gap: 0.1rem;
   position: relative;
   box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.1);
   transition: 0.2s ease;
@@ -107,12 +107,12 @@ h1 {
   flex: 1;
   background: white;
   border-radius: 1rem;
-  padding: 0.6rem;
+  padding: 0.25rem;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   justify-content: center;
-  gap: 0.4rem;
+  gap: 0.1rem;
   position: relative;
   box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.1);
   transition: 0.2s ease;
@@ -127,7 +127,7 @@ h1 {
   bottom: 0;
   left: 50%;
   width: 0.25rem; /* line thickness */
-  background: black;
+  background: orange;
   transform: translateX(-50%);
   z-index: 1;
   opacity: 0.9;
@@ -142,7 +142,7 @@ h1 {
 }
 
 .match-card {
-  background: lwhite;;
+  background: white;
   border-radius: 1rem;
   padding: 0.25rem;
   margin: 0.25rem auto;
