--- a/style.css
+++ b/style.css
@@ -211,6 +211,18 @@ h1 {
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
 }
+.team[data-team-side="L"] {
+  background: linear-gradient(135deg, #34d399, #059669);
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(52, 211, 153, 0.5);
+}
+
+.team[data-team-side="R"] {
+  background: linear-gradient(135deg, #3b82f6, #1d4ed8);
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(59, 130, 246, 0.5);
+}
+
 
 /* Player Buttons */
 .Lplayer-btn,
