--- a/style.css
+++ b/style.css
@@ -223,7 +223,12 @@ h1 {
   box-shadow: 0 4px 10px rgba(59, 130, 246, 0.5);
 }
 
-
+.team button {
+  background: none;
+  color: white;
+  font-weight: 600;
+  border: none;
+}
 /* Player Buttons */
 .Lplayer-btn,
 .Rplayer-btn,
