--- a/style.css
+++ b/style.css
@@ -212,16 +212,21 @@ h1 {
   border-top-right-radius: 0.5rem;
 }
 .team[data-team-side="L"] {
-  background: linear-gradient(135deg, #34d399, #059669);
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(52, 211, 153, 0.5);
+  background: rgba(46, 204, 113, 0.2);
+  backdrop-filter: blur(8px);
+  border: 1px solid rgba(46, 204, 113, 0.4);
+  border-radius: 12px;
+  box-shadow: inset 0 0 10px rgba(46, 204, 113, 0.3);
 }
 
 .team[data-team-side="R"] {
-  background: linear-gradient(135deg, #3b82f6, #1d4ed8);
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(59, 130, 246, 0.5);
+  background: rgba(52, 152, 219, 0.2);
+  backdrop-filter: blur(8px);
+  border: 1px solid rgba(52, 152, 219, 0.4);
+  border-radius: 12px;
+  box-shadow: inset 0 0 10px rgba(52, 152, 219, 0.3);
 }
+
 
 .team button {
   background: none;
