--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1 {
   background: white;
   color: black;
   padding: 0.5rem;
-  padding: 0.5rem 0;
+  margin: 0.5rem 0;
   border-radius: 0.75rem;
   box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.3);
   max-width: 95vw;
